[package]
name = "aoc2021"
version = "0.1.0"
edition = "2018"
authors = ["Samuel Cantero <scanterog@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[dependencies]
